[package]
name = "nexmark-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = { version = "1.1.4", features = ["serde"] }
clap = { version = "4.0.16", features = ["derive"] }
size-of = { version = "0.1.2", features = ["time-std"]}
rand = "0.8.4"
cached = "0.39.0"
anyhow = "1.0.65"
kafka = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
openssl = "0.10.30"
native-tls = "0.2.4"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.24", features = ["cmake-build"] }
envy = "0.4"
rand_chacha="0.3.1"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "generate_events"
harness = false

