[package]
edition = "2021"
name = "nexmark-server"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
arcstr = { version = "1.1.4", features = ["serde"] }
cached = "0.39.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.0.16", features = ["derive"] }
ctrlc = { version = "3.0", features = ["termination"] }
dotenv = "0.15.0"
envy = "0.4"
futures = "0.3"
kafka = "0.9"
native-tls = "0.2.4"
openssl = "0.10.30"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3.1"
rdkafka = { version = "0.24", features = ["cmake-build"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
size-of = { version = "0.1.2", features = ["time-std"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
harness = false
name = "generate_events"
